add scheduler adaptar terminal