@@ -14,25 +14,8 @@
         <maven.compiler.target>21</maven.compiler.target>
         <jacoco.version>0.8.11</jacoco.version>
     </properties>
-          
+
     <dependencies>
-        <!-- JavaFX --> <!-- JavaFX Swing (para inicializar JavaFX en tests con JFXPanel) -->
-         <dependency>
-              <groupId>org.openjfx</groupId>
-              <artifactId>javafx-swing</artifactId>
-              <version>21</version>
-         </dependency>
-
-        <!-- JavaFX Base (puede ser necesario para algunas clases básicas como VBox, HBox) -->
-         <dependency>
-             <groupId>org.openjfx</groupId>
-             <artifactId>javafx-base</artifactId>
-             <version>21</version>
-         </dependency>
-
-
-
-
         <!-- JUnit 4 -->
         <dependency>
             <groupId>junit</groupId>
@@ -47,52 +30,20 @@
             <artifactId>mockito-core</artifactId>
             <version>4.11.0</version>
             <scope>test</scope>
-          </dependency>
-         <!-- JavaFX BOM -->
-          <dependency>
-            <groupId>org.openjfx</groupId>
-            <artifactId>javafx-controls</artifactId>
-            <version>21</version>
-          </dependency>
-          <dependency>
-           <groupId>org.openjfx</groupId>
-           <artifactId>javafx-fxml</artifactId>
-           <version>21</version>
-          </dependency>
-
-
-        </dependencies>
+        </dependency>
+    </dependencies>
 
     <build>
-      <plugins>
+        <plugins>
+            <!-- Plugin para ejecutar el programa -->
             <plugin>
-               <groupId>org.openjfx</groupId>
-               <artifactId>javafx-maven-plugin</artifactId>
-               <version>0.0.8</version>
-               <configuration>
-                 <mainClass>menu.Main</mainClass> <!-- ← poné el nombre completo de tu clase main -->
-               </configuration>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>exec-maven-plugin</artifactId>
+                <version>3.1.0</version>
+                <configuration>
+                    <mainClass>menu.Main</mainClass> <!-- ← poné tu clase main -->
+                </configuration>
             </plugin>
-
-
-
-            <!--plugin paraa ejecutar -->
-            <plugin>
-             <groupId>org.codehaus.mojo</groupId>
-             <artifactId>exec-maven-plugin</artifactId>
-             <version>3.1.0</version>
-             <configuration>
-               <mainClass>menu.Main</mainClass>
-                <commandlineArgs></commandlineArgs>
-               <arguments>
-                 <argument>--module-path</argument>
-                 <argument>${javafx.module.path}</argument>
-                 <argument>--add-modules</argument>
-                 <argument>javafx.controls,javafx.fxml</argument>
-               </arguments>
-              </configuration>
-            </plugin>
-
 
             <!-- Compilar con Java 21 -->
             <plugin>
